--- a/app/index.css
+++ b/app/index.css
@@ -7,7 +7,8 @@ body,
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans,
+    Ubuntu, Cantarell, Helvetica Neue, sans-serif;
 }
 
 ul {
@@ -33,6 +34,7 @@ li {
 .btn-clear {
   border: none;
   background: transparent;
+  outline: none;
 }
 
 .nav-link {
@@ -42,6 +44,10 @@ li {
   color: inherit;
 }
 
+.nav li {
+  margin-right: 10px;
+}
+
 .grid {
   display: flex;
   flex-wrap: wrap;
@@ -49,6 +55,10 @@ li {
 
 .space-around {
   justify-content: space-around;
+}
+
+.space-between {
+  justify-content: space-between;
 }
 
 .header-lg {
@@ -136,7 +146,7 @@ li {
 
 .battle-instructions li {
   flex: 1;
-  min-width: 300px
+  min-width: 300px;
 }
 
 .battle-instructions svg {
@@ -187,7 +197,7 @@ li {
 .btn {
   padding: 10px;
   text-decoration: uppercase;
-  letter-spacing: .25em;
+  letter-spacing: 0.25em;
   border-radius: 3px;
   border: none;
   font-size: 16px;
@@ -242,7 +252,27 @@ li {
 }
 
 .dark {
-  color: #DADADA;
+  color: #dadada;
   background: #1c2022;
   min-height: 100%;
+}
+
+.bg-dark {
+  background: rgb(36, 40, 42);
+  border-radius: 3px;
+}
+
+.player-inputs .input-dark {
+  color: #dadada;
+  background: rgba(0, 0, 0, 0.3);
+}
+
+.light-btn {
+  color: #000;
+  background: #aaa8a8;
+}
+
+.light-btn:disabled {
+  background: #292929;
+  color: #4e4e4e;
 }
